--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "智能寵物營養管理系統",
   "type": "module",
+  "engines": {
+    "node": ">=14.18.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -24,7 +27,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.0",
-    "vite": "^5.0.8"
+    "vite": "^4.5.3"
   },
   "keywords": [
     "pet",
